Fixed overlapping divs on homepage.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,7 +65,7 @@ a{
         background-size: cover;
         background-position: center;
         width: 100wh;
-        height: 50vh;
+        // height: 50vh;
         display: flex;
         flex-direction: column;
         align-items: center;
